--- a/detector.ipynb
+++ b/detector.ipynb
@@ -1757,8 +1757,23 @@
    ],
    "source": [
     "cap = cv2.VideoCapture(\"/Users/maxkucher/pytorch/howitzer-detector/video_1.mp4\")\n",
-    "model = YOLO(\"/Users/maxkucher/pytorch/howitzer-detector/best.pt\")\n",
+    "model = YOLO(\"/Users/maxkucher/pytorch/best (10).pt\")\n",
     "yolo_model = YOLO(\"yolov8l\")\n",
+    "\n",
+    "# frame counter\n",
+    "frame_counter = 0  \n",
+    "last_saved_time = 0  \n",
+    "save_interval = 10 \n",
+    "\n",
+    "# folder where we will save screenshots\n",
+    "output_folder = \"/Users/maxkucher/pytorch/outputs\"\n",
+    "\n",
+    "if not os.path.exists(output_folder):\n",
+    "    os.makedirs(output_folder)\n",
+    "\n",
+    "fps = cap.get(cv2.CAP_PROP_FPS) \n",
+    "frame_interval = fps * save_interval \n",
+    "\n",
     "\n",
     "\n",
     "names = model.names\n",
@@ -1780,9 +1795,12 @@
     "\n",
     "    ret, frame = cap.read()\n",
     "    results = model(frame)[0]\n",
+    "    current_time = time.time()\n",
     "\n",
     "    for result in results.boxes.data.tolist():\n",
     "        x1, y1, x2, y2, score, class_id = result\n",
+    "\n",
+    "        \n",
     "\n",
     "        x_center = int((x1 + x2) / 2)\n",
     "        y_center = int((y1 + y2) / 2)\n",
@@ -1839,8 +1857,6 @@
     "                        truck_value = 0\n",
     "\n",
     "\n",
-    "                \n",
-    "\n",
     "            pred = np.argmax(analyzer_model.predict(np.array([[person_value, car_value, bus_value, truck_value]])))\n",
     "            pred_list = [\"Decoy\", \"Howitzer\", \"Undecided\"]\n",
     "            text = pred_list[int(pred)]\n",
@@ -1859,6 +1875,15 @@
     "            cv2.circle(frame, (x_center, y_center), 5, color, thickness=cv2.FILLED)\n",
     "            cv2.putText(frame, f\"Target status: {text.upper()}\", (int(x1), int(y1 - 30)), cv2.FONT_HERSHEY_SIMPLEX, 1.3, color, 3, cv2.LINE_AA)\n",
     "\n",
+    "            if current_time - last_saved_time >= save_interval:\n",
+    "                    frame_filename = os.path.join(output_folder, f\"frame_{frame_counter}_{text}.jpg\")\n",
+    "                    cv2.imwrite(frame_filename, frame)\n",
+    "                    print(f\"Saved frame {frame_counter} with detected object {text} as {frame_filename}\")\n",
+    "                    ast_saved_time = current_time\n",
+    "\n",
+    "            \n",
+    "            \n",
+    "            frame_counter += 1\n",
     "        \n",
     "    cv2.rectangle(frame, (8, 15), (350, 25),  (255, 255, 255), 20)\n",
     "    cv2.putText(frame, f\"Total object count: {total_objects}\", (10, 30), cv2.FONT_HERSHEY_SIMPLEX, 1, (0, 0, 0), 2)\n",
@@ -1873,11 +1898,14 @@
     "    cv2.putText(frame, f\"Decoys: {decoys}\", (10, 150), cv2.FONT_HERSHEY_SIMPLEX, 1, (0, 0, 0), 2)\n",
     "\n",
     "\n",
+    "        \n",
+    "    \n",
+    "\n",
+    "\n",
     "                    \n",
     "    if not ret:\n",
     "        break\n",
-    "    \n",
-    "    # даем имя рамке и выводим ее \n",
+    "\n",
     "    cv2.imshow(\"Object Detection\", frame)\n",
     "    \n",
     "    if cv2.waitKey(1) & 0xFF == ord('q'):\n",
